--- a/compose-assignment-2/docker-compose.yml
+++ b/compose-assignment-2/docker-compose.yml
@@ -1,1 +1,12 @@
 # create your drupal and postgres config here, based off the last assignment
+version: '2'
+
+services:
+  web:
+    image: drupal
+    ports:
+      - "8080:80"
+  postgres:
+    image: postgres
+    environment:
+      - "POSTGRES_PASSWORD=password"
