--- a/compose-assignment-1/docker-compose.yml
+++ b/compose-assignment-1/docker-compose.yml
@@ -6,7 +6,21 @@ services:
     image: drupal
     ports:
       - "8080:80"
+    volumes:
+     - drupal-modules:/var/www/html/modules
+     - drupal-profiles:/var/www/html/profiles
+     - drupal-sites:/var/www/html/sites
+     - drupal-themes:/var/www/html/themes
   postgres:
     image: postgres
     environment:
       - "POSTGRES_PASSWORD=password"
+    volumes:
+      - drupal-postgres-data:/var/lib/postgresql/data
+
+volumes:
+  drupal-modules:
+  drupal-profiles:
+  drupal-sites:
+  drupal-themes:
+  drupal-postgres-data:
